--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -19,10 +19,11 @@ body {
 // navbar
 nav {
     width: 100%;
-    height: 3rem;
+    height: 2.5rem;
     position: fixed;
     top: 0;
     padding: 0.5rem 0.3rem;
+    padding-top: 1.2rem;
     background-color: #050505;
     box-shadow: 0px 10px 15px -5px rgba(0, 0, 0, 0.7);
     // box-shadow: 0px 10px 15px -1px rgba(7, 7, 7, 0.8);
@@ -41,11 +42,11 @@ nav {
         li {
             margin: 0rem 0.5rem;
         }
-        li:first-child {
-            @media screen and (max-width: 700px){
-                margin-left: -0.5rem;
-            }
-        }
+        // li:first-child {
+        //     @media screen and (max-width: 700px){
+        //         margin-left: -0.5rem;
+        //     }
+        // }
          
         a {
             text-decoration: none;
@@ -68,19 +69,25 @@ nav {
     }
     .nav-li-div {
         display: flex;
-         li:first-child {
-            @media screen and (max-width: 700px){
-                margin-left: 0.3rem;
-            }
-        }
+        //  li:first-child {
+        //     @media screen and (max-width: 700px){
+        //         margin-left: 0.3rem;
+        //     }
+        // }
     }
     .nav-item-left {
         position: absolute;
-        top: 1.3rem;
+        top: 1rem;
         right: 2.8rem;
 
         @media screen and (max-width: 700px){
+            top: 2.8rem;
             right: 1.5rem;
+            flex-direction: column;
+
+            .login{
+                margin-top: -0.5rem;
+            }
         }
     }
 
@@ -115,6 +122,7 @@ nav {
 .main-nav {
     list-style-type: none;
     display: none;
+    // margin-top: 1rem;
 }
 
 .main-nav-link,
@@ -132,14 +140,14 @@ nav {
 .logo {
     display: inline-block;
     font-size: 20px;
-    margin-top: 10px;
+    // margin-top: 10px;
     margin-left: 20px;
 }
 
 // navbar hamburger icon
 .navbar-toggle-icon {
     position: absolute;
-    top: 17px;
+    top: 23px;
     right: 29px;
     cursor: pointer;
     color: rgba(236, 235, 235, 0.8);
@@ -152,6 +160,9 @@ nav {
 
 .toggle {
     display: block;
+    margin-top: -0.5rem;
+    padding: 0.5rem 0rem;
+    background-color: rgba(0, 0, 0,0.8);
 }
 
 @media screen and (min-width: 800px) {
@@ -165,6 +176,7 @@ nav {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
+        margin-top: -0.5rem;
         // height: 5rem;
         // background-color: rgba(0, 0, 0,0.8);
     }
@@ -178,7 +190,7 @@ nav {
     }
 
     .logo {
-        margin-top: 0;
+        margin-top: -1.5rem;
     }
 
     .navbar-toggle {
@@ -523,11 +535,26 @@ nav {
     .title-container {
         text-align: center;
     }
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+    }
+    .text-room {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        font-family: 'Staatliches', cursive;
+        font-size: 1.1em;
+        word-spacing: 0.2rem;
+        animation: fadeIn 1s infinite alternate;
+        @media screen and (max-width: 425px) {
+          font-size: 0.8em;
+        }
+    }
+
 }
 
-.title-container {
-    text-align: center;
-}
 
 // form style for login and register
 .form-container {
