--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -745,7 +745,7 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(67, 63, 80);
+    // background-color: rgb(67, 63, 80);
     background-image: url(../img/monkey-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -1046,3 +1046,35 @@ form {
         }
     }
 }
+
+// responsive
+@media screen and (max-width: 450px) {
+     .musician-account-container {
+         width: 18rem;
+     }
+}
+
+@media screen and (max-width: 700px) {
+    .musician-container-account-outer {
+        background-image: none;
+        
+        .musician-account-container {
+            align-self: center;
+            width: 23rem;
+            flex-direction: column;
+            justify-content: center;
+            margin-right: 0rem;
+            background-color: rgba(255, 255, 255,0.5);
+            
+            .musician-account {
+                width: 13.5rem;
+            }
+            .account-manager {
+                width: auto;
+                border-left: none;
+            }
+        }
+    }
+}
+
+
