--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -5,12 +5,9 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow-x: hidden;
-    // background-color: rgb(228, 226, 226);
 }
 
 .body-background {
-    //background-image: url(../img/negativeDrum.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -19,35 +16,22 @@ body {
 // navbar
 nav {
     width: 100%;
-    height: 2.5rem;
+    height: 2rem;
     position: fixed;
     top: 0;
     padding: 0.5rem 0.3rem;
     padding-top: 1.2rem;
     background-color: #050505;
     box-shadow: 0px 10px 15px -5px rgba(0, 0, 0, 0.7);
-    // box-shadow: 0px 10px 15px -1px rgba(7, 7, 7, 0.8);
     z-index: 1;
-
-    @media screen and (max-width: 700px){
-        height: 2rem;
-    }
-
     ul {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         list-style: none;
-
         li {
             margin: 0rem 0.5rem;
         }
-        // li:first-child {
-        //     @media screen and (max-width: 700px){
-        //         margin-left: -0.5rem;
-        //     }
-        // }
-         
         a {
             text-decoration: none;
             font-family: 'Staatliches', cursive;
@@ -58,8 +42,7 @@ nav {
             &:hover {
                 color: rgb(122, 90, 141);
             }
-
-            @media screen and (max-width: 700px){
+            @media screen and (max-width: 700px) {
                 font-size: 0.9em;
             }
         }
@@ -69,33 +52,27 @@ nav {
     }
     .nav-li-div {
         display: flex;
-        //  li:first-child {
-        //     @media screen and (max-width: 700px){
-        //         margin-left: 0.3rem;
-        //     }
-        // }
     }
     .nav-item-left {
         position: absolute;
         top: 1rem;
         right: 2.8rem;
-
-        @media screen and (max-width: 700px){
+        @media screen and (max-width: 700px) {
             top: 2.8rem;
             right: 1.5rem;
             flex-direction: column;
-
-            .login{
+            .login {
                 margin-top: -0.5rem;
             }
         }
     }
-
-    // .nav-item-auth {
-    //     margin-top: -0.5rem;
-    // }
-
-    // link hover effect
+    .logout {
+        top: 0.8rem;
+        @media screen and (max-width: 800px) {
+            top: 3rem;
+            right: 1.5rem;
+        }
+    }
     a.middle {
         position: relative;
     }
@@ -118,11 +95,10 @@ nav {
 }
 
 // responsive navbar
-
 .main-nav {
     list-style-type: none;
     display: none;
-    // margin-top: 1rem;
+    margin-top: -0.5em;
 }
 
 .main-nav-link,
@@ -147,13 +123,12 @@ nav {
 // navbar hamburger icon
 .navbar-toggle-icon {
     position: absolute;
-    top: 23px;
+    top: 17px;
     right: 29px;
     cursor: pointer;
     color: rgba(236, 235, 235, 0.8);
     font-size: 24px;
-
-     @media screen and (min-width: 800px){
+    @media screen and (min-width: 800px) {
         display: none;
     }
 }
@@ -162,7 +137,7 @@ nav {
     display: block;
     margin-top: -0.5rem;
     padding: 0.5rem 0rem;
-    background-color: rgba(0, 0, 0,0.8);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 @media screen and (min-width: 800px) {
@@ -171,57 +146,43 @@ nav {
         padding-bottom: 0;
         align-items: center;
     }
-
     .main-nav {
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
-        margin-top: -0.5rem;
-        // height: 5rem;
-        // background-color: rgba(0, 0, 0,0.8);
+        margin-top: -0.3em;
     }
-
     .main-nav li {
         margin: 0;
     }
-
     .main-nav-link {
         margin-left: 30px;
     }
-
     .logo {
         margin-top: -1.5rem;
     }
-
     .navbar-toggle {
         display: none;
     }
-
     .logo:hover,
     .main-nav-link:hover {
-        color: rgb(241, 237, 237);
+        color: rgb(122, 90, 141);
     }
 }
 
 // ========================================
-
 .app-container {
-    min-height: 90vh;
+    min-height: calc(100vh - 3.5rem);
     margin-top: 3.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // background-color: rgba(241, 236, 236, 0.5);
-    // background: rgb(111,134,173);
-    // background: radial-gradient(circle, rgba(111,134,173,0.9724089464887518) 0%, rgba(3,4,29,1) 83%);
-    // background: rgb(70,149,172);
-    // background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(3,4,29,1) 83%);
+    overflow-x: hidden;
     background: rgb(70, 149, 172);
     background: radial-gradient(circle, rgba(70, 149, 172, 1) 0%, rgba(1, 1, 13, 1) 87%);
-
-    @media screen and (max-width: 800px) {
+    @media screen and (min-width: 798px) {
         margin-top: 3.0rem;
+        min-height: calc(100vh - 3rem);
     }
 }
 
@@ -240,19 +201,16 @@ nav {
             text-align: center;
             color: rgb(90, 90, 90);
             text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-       
             &::before {
-                    content: "-";
-                }
-                &::after {
-                    content: "-";
-                }
-
+                content: "-";
+            }
+            &::after {
+                content: "-";
+            }
             @media screen and (max-width: 475px) {
                 font-size: 1em;
                 letter-spacing: 1em;
                 padding: 0rem 0.3rem;
-
                 &::before {
                     content: "";
                 }
@@ -260,7 +218,6 @@ nav {
                     content: "";
                 }
             }
-
             @media screen and (max-width: 700px) {
                 font-size: 1em;
                 letter-spacing: 1em;
@@ -286,16 +243,14 @@ nav {
         background-position: center;
         box-shadow: 1px -1px 11px -1px rgba(0, 0, 0, 0.75);
         box-shadow: 0px 10px 15px -5px rgba(15, 15, 15, 0.75);
-
         @media screen and (max-width: 700px) {
             height: 20rem;
             background-size: auto 25rem;
-
             canvas {
                 height: 20rem;
+                width: 100%;
             }
         }
-
         // search container
         .search-container {
             .search-overlay {
@@ -324,14 +279,23 @@ nav {
                     border: 1px solid black;
                     cursor: pointer;
                 }
-
                 @media screen and (max-width: 899px) {
-                    width: 15rem;
-                    left: 20%;
+                    width: 13rem;
+                    top: 18rem;
+                    left: 30%;
+                    padding: 0rem;
+                    align-self: center;
+                    img {
+                        width: 5rem;
+                        height: auto;
+                    }
+                    .p-uploads {
+                        display: none;
+                    }
+                    .img-waves {
+                        display: none;
+                    }
                 }
-                // @media screen and (min-width: 900px) {
-                //     left: 50%;
-                // }
                 @media screen and (min-width: 900px) {
                     left: 38%;
                 }
@@ -359,7 +323,6 @@ nav {
         align-items: center;
         padding: 0.5rem;
         background-color: rgb(228, 226, 226);
-
         @media screen and (max-width: 700px) {
             img {
                 width: 20rem;
@@ -368,44 +331,39 @@ nav {
     }
     // audioRoom-control 
     .audio-room-section {
-        height: 100vh;
-        // width: 100vw;
-        padding: 5rem 0rem;
+        overflow: hidden;
+        position: relative;
+        padding: 5rem 0;
         display: flex;
         align-items: center;
         justify-content: center;
         background-image: url(../img/MICScollage.jpg);
         background-position: center;
         background-repeat: no-repeat;
-        background-size: contain;
-
-        @media screen and (max-width: 700px) {
-            height: 30rem;
+        background-size: cover;
+        position: relative;
+        @media (min-width: 1000px) {
+            background-size: contain;
         }
     }
     .audio-room-inner-section {
-        ///position: absolute;
+        position: relative;
         height: 65vh;
         width: 35vw;
-        margin: 3rem 0rem;
         padding: 5rem;
         border-radius: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: rgba(203, 203, 230, 0.7);
-
         @media screen and (max-width: 700px) {
             height: 15rem;
         }
     }
     .audioRoom-control {
-        //height: 30vh;
         position: absolute;
         width: 250px;
         height: 250px;
-        // margin: 10rem auto;
-        //margin-top: 20rem;
         background: black;
         border-radius: 5px;
         display: flex;
@@ -540,7 +498,6 @@ nav {
             opacity: 0;
         }
     }
-
     .text-room {
         display: flex;
         align-items: center;
@@ -550,12 +507,10 @@ nav {
         word-spacing: 0.2rem;
         animation: fadeIn 1s infinite alternate;
         @media screen and (max-width: 425px) {
-          font-size: 0.8em;
+            font-size: 0.8em;
         }
     }
-
 }
-
 
 // form style for login and register
 .form-container {
@@ -567,17 +522,14 @@ nav {
     box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
     font-family: 'Staatliches', cursive;
     letter-spacing: 0.09em;
-
     @media screen and (max-width: 550px) {
         width: 23rem;
         margin-top: -5rem;
         margin-bottom: 0rem;
     }
-
     @media screen and (max-width: 700px) {
         margin-top: -10rem;
     }
-
     form {
         display: flex;
         flex-direction: column;
@@ -589,7 +541,6 @@ nav {
         border-bottom: 3px solid rgb(122, 90, 141);
         input {
             margin: 0.5rem;
-            // padding: 0.2rem 3rem;
             letter-spacing: 0.05em;
         }
         input[type='text'],
@@ -609,7 +560,6 @@ nav {
         }
         .inp-label {
             text-align: left;
-            // margin-right: 1rem;
         }
     }
     h2 {
@@ -664,12 +614,10 @@ nav {
 .musician-container {
     // width: 100vw;
     margin-top: 2rem;
-    padding: 2rem 2rem 3rem 6rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // background-image: url(../img/collage.jpg);
     h2 {
         font-size: 2rem;
         font-family: 'Staatliches', cursive;
@@ -745,7 +693,7 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // background-color: rgb(67, 63, 80);
+    //background-color: rgb(67, 63, 80);
     background-image: url(../img/monkey-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -933,50 +881,34 @@ form {
     text-shadow: 2px 2px 2px rgba(68, 54, 133, 0.3);
     font-size: 0.8em;
     letter-spacing: 0.1em;
+    display: none;
+    @media (min-width: 730px) {
+        display: block;
+    }
 }
 
 .drummer-name {
-    position: relative;
-    top: -17rem;
-    right: 4.5rem;
-
-    @media screen and (max-width: 700px) {
-        top: -11rem;
-        right: -3rem;
-    }
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
 }
 
 .guitar-name {
-    position: relative;
-    top: -17rem;
-    left: 20.5rem;
-
-    @media screen and (max-width: 700px) {
-        top: -11rem;
-        left: 8rem;
-    }
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
 }
 
 .bass-name {
-    position: relative;
-    top: 17rem;
-    left: 14.5rem;
-
-    @media screen and (max-width: 700px) {
-        top: 10rem;
-        left: 5rem;
-    }
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
 }
 
 .keyboard-name {
-    position: relative;
-    top: 17rem;
-    right: 22rem;
-
-    @media screen and (max-width: 700px) {
-        top: 10rem;
-        right: 8rem;
-    }
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
 }
 
 // services
@@ -999,6 +931,12 @@ form {
         p {
             color: #000;
         }
+        @media (max-width: 850px) {
+            width: 30rem;
+            padding: 1rem;
+            flex-direction: column;
+            justify-content: center;
+        }
         .services {
             width: 20rem;
             a {
@@ -1012,6 +950,19 @@ form {
                 padding-right: 0.5rem;
                 text-decoration: underline;
             }
+            @media (max-width: 850px) {
+                margin: 2rem 0rem;
+                text-align: left;
+            }
+        }
+    }
+    @media (max-width: 872px) {
+        justify-content: center;
+        flex-wrap: wrap;
+        text-align: center;
+        .service-txt {
+            width: 20rem;
+            margin: 0 auto;
         }
     }
 }
@@ -1049,23 +1000,21 @@ form {
 
 // responsive
 @media screen and (max-width: 450px) {
-     .musician-account-container {
-         width: 18rem;
-     }
+    .musician-account-container {
+        width: 18rem;
+    }
 }
 
 @media screen and (max-width: 700px) {
     .musician-container-account-outer {
         background-image: none;
-        
         .musician-account-container {
             align-self: center;
             width: 23rem;
             flex-direction: column;
             justify-content: center;
             margin-right: 0rem;
-            background-color: rgba(255, 255, 255,0.5);
-            
+            background-color: rgba(255, 255, 255, 0.5);
             .musician-account {
                 width: 13.5rem;
             }
@@ -1076,5 +1025,3 @@ form {
         }
     }
 }
-
-
